tests/baselines/reference/aliasBug.errors.txt
aliasBug.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
aliasBug.ts(5,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
aliasBug.ts(5,39): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
aliasBug.ts(16,15): error TS2694: Namespace 'foo.bar.baz' has no exported member 'bar'.


==== aliasBug.ts (4 errors) ====
    module foo {    
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Provide {
        }
    
        export module bar { export module baz {export class boo {}}}
                      ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
                                          ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }
    
    import provide = foo;
    import booz = foo.bar.baz;
    
    var p = new provide.Provide();
    
    function use() {
      var p1: provide.Provide; // error here, but should be okay
      var p2: foo.Provide;
      var p3:booz.bar;
                  ~~~
!!! error TS2694: Namespace 'foo.bar.baz' has no exported member 'bar'.
      var p22 = new provide.Provide();
    }
    